# Learn2Drive

./: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements.txt
autonomy_stack/: __init__.py  schemas.py
autonomy_stack/agents/: __init__.py  expert.py  student.py
autonomy_stack/data_engine/: __init__.py  cards.py  episode_store.py  failure_mining.py  model_comparison.py
autonomy_stack/deployment/: __init__.py  onnx_export.py
autonomy_stack/evaluation/: __init__.py  metrics.py
autonomy_stack/models/: __init__.py  policy.py  world_model.py
autonomy_stack/optimization/: __init__.py  latency.py
autonomy_stack/simulation/: __init__.py  carla_adapter.py  scenarios.py
autonomy_stack/training/: __init__.py  bc.py  dagger.py  offline_rl.py  replay_buffer.py  world_model_losses.py
configs/: behavior_cloning.yaml  carla_collect_small.yaml  carla_eval_small.yaml  carla_local.yaml  carla_train_bc_small.yaml  dagger_loop.yaml  data_engine.yaml  deployment.yaml  evaluation.yaml  offline_rl.yaml  world_model.yaml
docs/: ARCHITECTURE.md  START_HERE.md
reports/: model_comparison.json  model_comparison.md
scripts/: benchmark_policy.py  collect_carla_episodes.py  compare_policies.py  evaluate_policy.py  generate_dataset_card.py  generate_model_card.py  run_end_to_end_demo.py  run_smoke_demo.py  train_bc_from_dataset.py
tests/: test_carla_configs.py  test_episode_store.py  test_imports_and_config.py  test_models_and_latency.py  test_schemas_metrics_and_mining.py  test_simulation_dashboard_training.py  test_training_and_deployment.py
(+3 files in other folders)
